[package]
name = "rsfetch"
version = "0.1.0"
authors = ["Ash <valleyknight@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
music = ["mpd"]
nomusic = []
plain_output = []
pretty_output = ["prettytable-rs"]

[dependencies]
clap = "2.33.1"
glob = "0.3.0"
mpd = { version = "0.0.12", optional = true }
prettytable-rs = { version = "^0.8", optional = true }