[package]
name = "rsfetch"
version = "0.1.0"
authors = ["Ash <valleyknight@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pretty_output = ["prettytable-rs"]
music = ["nixinfo/music"]

[dependencies]
clap = "2.33.1"
prettytable-rs = { version = "^0.8", optional = true }
nixinfo = "0.1.4"