[package]
name = "rsfetch"
version = "0.1.0"
authors = ["Ash <valleyknight@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pretty_output = ["prettytable-rs"]
music_mpd = ["nixinfo/music_mpd"]
music_playerctl = ["nixinfo/music_playerctl"]

[dependencies]
clap = "2.33.3"
prettytable-rs = { version = "0.10.0", optional = true }
nixinfo = { git = "https://github.com/Phate6660/nixinfo" }

[profile.release]
codegen-units = 1
lto = "fat"
